--- a/code/randall/flask_html_css/lab02_blog/index.html
+++ b/code/randall/flask_html_css/lab02_blog/index.html
@@ -37,16 +37,16 @@ Let's make the template of a blog with a title, top-nav, side-nav, and multiple 
       </ul>
     </aside>
   
-    <article>
-      Article
+    <article class="art1">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, totam ratione numquam doloribus dolorum ullam at debitis repellendus iusto adipisci vero sint fugit soluta maxime velit porro ex itaque commodi.
     </article>
-    <article>
-        Article
+    <article class="art2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi fugit corrupti ad necessitatibus dicta in explicabo mollitia, iste sequi? Consequatur obcaecati aperiam odit assumenda, eius nihil, eaque quae veritatis voluptate nobis animi, provident saepe debitis? Velit laudantium aspernatur laborum dolores illo soluta quod. Libero, ipsam incidunt? Rerum tenetur amet est!
     </article>
-    <article>
-        Article
+    <article class="art3">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam id saepe totam, quas soluta, quod et explicabo atque minus eligendi quo earum, consequuntur quaerat culpa natus ea dolores reiciendis illum! Nesciunt deserunt quaerat, natus rem hic laborum quod amet. Consectetur enim rerum molestiae, asperiores delectus nisi laudantium commodi et nulla veritatis voluptatum iure eius aperiam blanditiis odit amet. Quos nemo dicta maiores veniam sit nobis! Possimus amet iusto, doloribus ut nisi animi eius aliquam commodi blanditiis corrupti magnam eligendi debitis, necessitatibus id? Sint nam, unde nobis quas ab error aut nostrum nulla labore earum blanditiis nihil quia ea dolorum aliquam cumque omnis quo numquam similique. A et inventore veritatis in possimus, expedita aspernatur quisquam eligendi velit laboriosam tenetur veniam voluptate similique ducimus cumque nesciunt nulla! Ipsum ut beatae voluptates nemo error, repellendus explicabo, sunt ab repellat distinctio suscipit? Veritatis, debitis non facere quae ea porro molestias assumenda harum esse tempore.
     </article>
-    <article>
+    <article class="art4">
         Article
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum imperdiet nibh eget neque cursus fermentum et quis nulla. Proin mollis rhoncus pulvinar. Phasellus tristique lacus vitae metus posuere, id iaculis ipsum porttitor. Sed laoreet sed libero et viverra. Pellentesque ut felis nec lacus tempor tincidunt. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin at velit faucibus, facilisis arcu eu, tincidunt arcu. Curabitur ullamcorper enim a sollicitudin sagittis. Donec eu ligula dictum, aliquam arcu vel, tempor felis. Nunc dapibus convallis ante, vitae pharetra tortor lobortis quis. Integer eu magna non leo pharetra pharetra eget at libero. Suspendisse elementum dolor nec eros dignissim, eget facilisis leo rutrum. Cras quam ipsum, aliquam sed placerat id, venenatis a velit. Mauris placerat sit amet enim et blandit.
       </article>
@@ -55,7 +55,7 @@ Let's make the template of a blog with a title, top-nav, side-nav, and multiple 
       Right Sidebar
     </aside>
     
-    <footer>
+    <footer class="bottom-foot">
       Footer
     </footer>
   </div>
