Updated Mob Lab 2 Stacy and April

--- a/code/april/html_css_flask/mob_lab2_storefront/index.html
+++ b/code/april/html_css_flask/mob_lab2_storefront/index.html
@@ -6,15 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Storefront</title>
+    <link rel="normalize" href="https://raw.githubusercontent.com/necolas/normalize.css/master/normalize.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo"></div>
-        <div class="title"></div>
-        <nav></nav>
+        <div class="title">Some Dog Toy Store</div>
+        <div class="logo">
+            <img src="dog.png" alt="logo">
+        </div>
+        <nav>
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Shop</a>
+            <a href="">Contact</a>
+        </nav>
     </header>
     <main>
-        <p>
+        <p class="company_info">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo unde porro fugiat, quibusdam quidem doloremque accusamus id laudantium ipsum eligendi quia sed iure totam ullam commodi amet delectus, quae harum.
         </p>
         <div class="products" >
