Updated Mob Lab2

--- a/code/april/html_css_flask/mob_lab2_storefront/index.html
+++ b/code/april/html_css_flask/mob_lab2_storefront/index.html
@@ -29,17 +29,17 @@
         <div class="products" >
             <div>
                 <h3>Product 1</h3>
-                <img src="toy1.png" alt="dog bone">
+                <img class="product_img" src="toy1.png" alt="dog bone">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem distinctio atque perspiciatis unde officiis aut voluptatum excepturi impedit ipsam voluptates, placeat, ullam, sint sed mollitia beatae ex sunt illum dignissimos?</p>
             </div>
             <div>
                 <h3>Product 2</h3>
-                <img src="toy 2.png" alt="dog ball">
+                <img class="product_img" src="toy 2.png" alt="dog ball">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet est dolore fuga delectus veritatis repudiandae sit saepe, blanditiis minima repellendus ullam, velit cumque unde consectetur aut qui commodi eum ipsam.</p>
             </div>
             <div>
                 <h3>Product 3</h3>
-                <img src="toy 3.png" alt="dog rope">
+                <img class="product_img" src="toy 3.png" alt="dog rope">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, totam fuga? Facere quo aspernatur, nihil molestiae voluptate consequuntur laborum nulla facilis accusamus ipsam natus ducimus quod ratione a eaque commodi.</p>
             </div>
         </div>
@@ -54,3 +54,9 @@ Add some lorem ipsum for a company page
 Add a list of products (at least 3) with images and descriptions (use flexbox)
 Add a footer with a copyright
  -->
+<!-- Part 2
+Make all the content centered
+Make sure the page looks okay on mobile
+Add an effect when you hover over the links in the nav
+Add an effect when you hover over the products 
+-->
