--- a/code/adam/HTML_CSS_FLASK/lab3StoreFront/index.html
+++ b/code/adam/HTML_CSS_FLASK/lab3StoreFront/index.html
@@ -30,33 +30,33 @@
             <div class="post1">
                 <div class="title-row">
                     <img src="product1.png" alt="" height="175" width="150">
-                    <h3>This is my trip to mexico</h3>
+                    <h3>Lorem ipsum dolor sit.</h3>
                     <h4>By: John Doe</h4>
                 </div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, sapiente. Incidunt. </p> 
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> 
             </div>
            
             <div class="post2" >
                 <img src="product2.png" alt="" height="175" width="150">
                 <div class="title-row">
-                    <h3>This is my trip to mexico</h3>
+                    <h3>Lorem ipsum dolor sit amet.</h3>
                     <h4>By: John Doe</h4>
                 </div>
-                <p>welcome to mexico</p> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> 
             </div>
           
             <div class="post3">
                 <img src="product3.png" alt="" height="175" width="150">
                 <div class="title-row">
-                    <h3>This is my trip to mexico</h3>
+                    <h3>Lorem ipsum dolor sit.</h3>
                     <h4>By: John Doe</h4>
                 </div>
-                <p>welcome to mexico</p> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> 
             </div>
         </div> 
     </main>
     <footer class="footer">
-        Copyright
+        &copy;2022
         <h4>Contact Info <a href="mailto:jondoe@email.com">John's Email</a></h4>
     </footer>
 </body>
