Company lab draft

--- a/code/randall/flask_html_css/lab03_company/index.html
+++ b/code/randall/flask_html_css/lab03_company/index.html
@@ -2,7 +2,7 @@
  <!DOCTYPE html>
  <html lang="en">
  <head>
-   <title>Bootstrap Theme Company</title>
+   <title>Cat Walkers</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
  <body>
   <style>
     .jumbotron {
-      background-color: #f4511e; /* Orange */
+      background-color: #1e85f4; /* Orange */
       color: #ffffff;
       padding: 100px 25px;
     }
@@ -24,8 +24,9 @@
     
     </style>
     <div class="jumbotron text-center">
-        <h1>Company</h1>
-        <p>We specialize in blablabla</p>
+        <h1>Cat Walkers</h1>
+        <p>We walk cats, so you don't have to</p>
+        <p></p>
         <form class="form-inline">
             <div class="input-group">
               <input type="email" class="form-control" size="50" placeholder="Email Address" required>
@@ -52,13 +53,13 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-8">
-          <h2>About Company Page</h2>
-          <h4>Lorem ipsum..</h4>
-          <p>Lorem ipsum..</p>
+          <h2>About The Company</h2>
+          <h4>We will take your little demon for a walk so they won't direct their evil and natural hatred toward you!</h4>
+          <p>Cats need exercise but also hate it, just like most of us humans.</p>
           <button class="btn btn-default btn-lg">Get in Touch</button>
         </div>
         <div class="col-sm-4">
-          <span class="glyphicon glyphicon-signal logo"></span>
+            <i class="fas fa-cat fa-10x"></i>
         </div>
       </div>
     </div>
@@ -66,15 +67,14 @@
     <div class="container-fluid bg-grey">
       <div class="row">
         <div class="col-sm-4">
-          <span class="glyphicon glyphicon-globe logo"></span>
+            <i class="fas fa-paw fa-10x"></i>
         </div>
         <div class="col-sm-8">
           <h2>Our Values</h2>
-          <h4><strong>MISSION:</strong> Our mission lorem ipsum..</h4>
-          <p><strong>VISION:</strong> Our vision Lorem ipsum..</p>
+          <h4><strong>MISSION:</strong>We will walk your cat to stifle the natural evil that grows within a sedentary feline.</h4>
+          <p><strong>VISION:</strong> To save as many cat owners souls as possible.</p>
         </div>
       </div>
     </div> 
-    <i class="fa-solid fa-cat"></i>
  </body>
  </html> 
