--- a/code/randall/flask_html_css/test.html
+++ b/code/randall/flask_html_css/test.html
@@ -5,11 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  
   <script src="https://kit.fontawesome.com/e512602f4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <i class="fa-solid fa-cat"></i>
+  <div style="font-size: 0.5rem;">
+    <i class="fas fa-camera fa-xs"></i>
+    <i class="fas fa-camera fa-sm"></i>
+    <i class="fas fa-camera fa-lg"></i>
+    <i class="fas fa-camera fa-2x"></i>
+    <i class="fas fa-camera fa-3x"></i>
+    <i class="fas fa-camera fa-5x"></i>
+    <i class="fas fa-camera fa-7x"></i>
+    <i class="fas fa-camera fa-10x"></i>
+    <i class="fas fa-cat"></i>
+  </div>
 </body>
 </html>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M322.6 192C302.4 192 215.8 194 160 278V192c0-53-43-96-96-96C46.38 96 32 110.4 32 128s14.38 32 32 32s32 14.38 32 32v256c0 35.25 28.75 64 64 64h176c8.875 0 16-7.125 16-15.1V480c0-17.62-14.38-32-32-32h-32l128-96v144c0 8.875 7.125 16 16 16h32c8.875 0 16-7.125 16-16V289.9c-10.25 2.625-20.88 4.5-32 4.5C386.2 294.4 334.5 250.4 322.6 192zM480 96h-64l-64-64v134.4c0 53 43 95.1 96 95.1s96-42.1 96-95.1V32L480 96zM408 176c-8.875 0-16-7.125-16-16s7.125-16 16-16s16 7.125 16 16S416.9 176 408 176zM488 176c-8.875 0-16-7.125-16-16s7.125-16 16-16s16 7.125 16 16S496.9 176 488 176z"/></svg>
