--- a/code/randall/flask_html_css/lab03_company/index.html
+++ b/code/randall/flask_html_css/lab03_company/index.html
@@ -9,64 +9,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
       <script src="https://kit.fontawesome.com/e512602f4c.js" crossorigin="anonymous"></script>
-      <style>
-         .jumbotron {
-         background-color: #1e7ef4;
-         color: #fff;
-         padding: 100px 25px;
-         }
-         .container-fluid {
-         padding: 60px 50px;
-         }
-         .bg-grey {
-         background-color: #f6f6f6;
-         }
-         .logo-small {
-         color: #1e7ef4;
-         font-size: 50px;
-         }
-         .logo {
-         color: #1e7ef4;
-         font-size: 200px;
-         }
-         .thumbnail {
-         padding: 0 0 15px 0;
-         border: none;
-         border-radius: 0;
-         }
-         .thumbnail img {
-         width: 100%;
-         height: 100%;
-         margin-bottom: 10px;
-         }
-         .carousel-control.right, .carousel-control.left {
-         background-image: none;
-         color: #1e7ef4;
-         }
-         .carousel-indicators li {
-    border-color: #1e7ef4;
-  }
-  .carousel-indicators li.active {
-    background-color: #1e7ef4;
-  }
-         .item h4 {
-         font-size: 19px;
-         line-height: 1.375em;
-         font-weight: 400;
-         font-style: italic;
-         margin: 70px 0;
-         }
-         .item span {
-         font-style: normal;
-         }
-         @media screen and (max-width: 768px) {
-         .col-sm-4 {
-         text-align: center;
-         margin: 25px 0;
-         }
-
-         }
-      </style>
+      <link rel="stylesheet" href="styles.css">
    </head>
    <body>
       <div class="jumbotron text-center">
@@ -175,13 +118,13 @@
             </div>
          </div>
          <h2>What our customers say</h2>
-      <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+         <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                <li data-target="#myCarousel" data-slide-to="1"></li>
                <li data-target="#myCarousel" data-slide-to="2"></li>
-             </ol>
+            </ol>
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                <div class="item active">
