--- a/code/randall/flask_html_css/lab03_company/index.html
+++ b/code/randall/flask_html_css/lab03_company/index.html
@@ -131,7 +131,7 @@
                   <h4>"Cat Walkers saved my life, literally"<br><span style="font-style:normal;">Lennie Marks, Maintenance, Sansbury</span></h4>
                </div>
                <div class="item">
-                  <h4>"I let them borrow an old book of mine, still waiting to get that back!"<br><span style="font-style:normal;">Ash Williams, Hardwares, S-Mart</span></h4>
+                  <h4>"I let them borrow an old book of mine, still waiting to get that back!"<br><span style="font-style:normal;">Ash, Hardwares, S-Mart, "Shop smart, shop S-Mart"</span></h4>
                </div>
                <div class="item">
                   <h4>"I had them paint my Sparkles. We all just laughed and laughed and laughed."<br><span style="font-style:normal;">Karen, Unemployed, At home</span></h4>
