--- a/code/wesley/html_css_flask/Lab3/index.html
+++ b/code/wesley/html_css_flask/Lab3/index.html
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col s12 m19">
                     <div class="card white darken-1">
-                        <div class="card-content black-text">
+                        <div class="card-content center black-text">
                             <i class="medium material-icons orange-text">map</i>
                             <span class="card-title center">Locate</span>
                         </div>
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col s12 m19">
                     <div class="card white darken-1">
-                        <div class="card-content black-text">
+                        <div class="card-content center black-text">
                             <i class="medium material-icons orange-text">storefront</i>
                             <span class="card-title center">Select</span>
                         </div>
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="col s12 m19">
                     <div class="card white darken-1">
-                        <div class="card-content black-text">
+                        <div class="card-content center black-text">
                             <i class="medium material-icons orange-text">account_balance_wallet</i>
                             <span class="card-title center">Pay</span>
                         </div>
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="col s12 m19">
                     <div class="card white darken-1">
-                        <div class="card-content black-text">
+                        <div class="card-content center black-text">
                             <i class="medium material-icons orange-text">takeout_dining</i>
                             <span class="card-title center">Enjoy</span>
                         </div>
@@ -136,15 +136,15 @@
     <div class="section">
         <section class=" align-items ">
             <div>
+                <button class="btn right align">
+                    <span>Compare</span>
+                </button>
                 <h6>
                     <span>When you can save so much on food, why go anywhere else?</span>
                 </h6>
                 <h6>
                     <span>Find your saving on Foodhub compared to other portals and take your call</span>
                 </h6>
-                <button class="btn">
-                    <span>Compare</span>
-                </button>
             </div>
         </section>
     </div>
@@ -218,7 +218,7 @@
     </div>
 
     <footer class="footer white">
-    <div class="section">
+    <div class="section footer">
         <div class="row">
             <div class="col s8">
                 <div>
