--- a/code/wesley/html_css_flask/Lab3/index.html
+++ b/code/wesley/html_css_flask/Lab3/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Order Food Online, Takeout Food Delivery - FOODHUB</title>
+  <title>Order Food Online, Takeout Food Delivery - HubFood</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="https://play-lh.googleusercontent.com/s6FHg1NWwX1xpeuzGXzAt56KiwFjRgt2tYDlFe-okstp3ySAHbxKrF8tEuqiS4hl4i4">
   <link rel="icon" type="image/png" sizes="16x16" href="https://play-lh.googleusercontent.com/s6FHg1NWwX1xpeuzGXzAt56KiwFjRgt2tYDlFe-okstp3ySAHbxKrF8tEuqiS4hl4i4">
@@ -16,8 +16,8 @@
 <body>
     <nav class="white">
         <div class="container">
-            <a href="https://foodhub.co.uk/compressed_images/logo.svg" class="brand-logo">
-                <img src="https://foodhub.co.uk/compressed_images/logo.svg" alt="">
+            <a href="hubfood (3).svg" class="brand-logo">
+                <img src="hubfood (3).svg" alt="">
             </a>
             <ul class="right">
                 <li>
