Added new images to slides

--- a/code/stacy/HTML_CSS_Flask/lab03/index.html
+++ b/code/stacy/HTML_CSS_Flask/lab03/index.html
@@ -197,7 +197,7 @@ Body:
           </div>
           <div class="carousel-item">
             <div class="carousel-content">
-              <img src="zipline2.jpg" class="rounded mx-auto d-block" alt="...">
+              <img src="zipline2.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block"  class="position-relative">
                 <h5 class="position-absolute top-0 start-50 translate-middle">
                   Second slide
