--- a/code/randall/flask_html_css/lab03_company/index.html
+++ b/code/randall/flask_html_css/lab03_company/index.html
@@ -9,16 +9,38 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
       <script src="https://kit.fontawesome.com/e512602f4c.js" crossorigin="anonymous"></script>
+      <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="styles.css">
    </head>
-   <body>
+   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+      <nav class="navbar navbar-default navbar-fixed-top">
+         <div class="container">
+            <div class="navbar-header">
+               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               </button>
+               <a id= "logo-top-left" class="navbar-brand" href="#">Cat Walkers</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+               <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#about">ABOUT</a></li>
+                  <li><a href="#services">SERVICES</a></li>
+                  <li><a href="#portfolio">PORTFOLIO</a></li>
+                  <li><a href="#pricing">PRICING</a></li>
+                  <li><a href="#contact">CONTACT</a></li>
+               </ul>
+            </div>
+         </div>
+      </nav>
       <div class="jumbotron text-center">
          <h1>Cat Walkers</h1>
          <p>We walk cats, so you don't have to.</p>
          <p></p>
          <form class="form-inline">
             <div class="input-group">
-               <input type="email" class="form-control" size="50" placeholder="Email Address" required>
+               <input type="email" class="form-control" size="50" placeholder="Email Address for subscription to silly cat things" required>
                <div class="input-group-btn">
                   <button type="button" class="btn btn-danger">Subscribe</button>
                </div>
@@ -26,7 +48,7 @@
          </form>
       </div>
       </div>
-      <div class="container-fluid">
+      <div id="about" class="container-fluid">
          <div class="row">
             <div class="col-sm-8">
                <h2>About The Company</h2>
@@ -51,7 +73,7 @@
             </div>
          </div>
       </div>
-      <div class="container-fluid text-center">
+      <div id="services" class="container-fluid text-center">
          <h2>SERVICES</h2>
          <h4>What we offer</h4>
          <br>
@@ -59,17 +81,17 @@
             <div class="col-sm-4">
                <span class="fas fa-walking logo-small"></span>
                <h4>Cat Walking</h4>
-               <p>We take your cat for a walk!</p>
+               <p>We take your cat for a 30-45 minute walk!</p>
             </div>
             <div class="col-sm-4">
                <span class="fas fa-cross logo-small"></span>
                <h4>Exorcisms</h4>
-               <p>What happens when your little animal doesn't get regular exercise.</p>
+               <p>What happens when your little animal doesn't get regular exercise. But also happens randomly because, well...their cats! </p>
             </div>
             <div class="col-sm-4">
                <span class="fas fa-book-dead logo-small"></span>
                <h4>KLAATU BARADA NIKTO</h4>
-               <p>When things have gone past the point of no return...</p>
+               <p>When things have gone past the point of no return...(Special Pricing upon request)</p>
             </div>
          </div>
          <br><br>
@@ -87,11 +109,11 @@
             <div class="col-sm-4">
                <span class="fas fa-rocket logo-small"></span>
                <h4>Space Cat</h4>
-               <p>We haven't quite perfected this service. A liability waiver is required. First cat to survive gets free walks for all 9 of its lives.</p>
+               <p>We haven't quite perfected this service. A liability waiver is required. First cat to survive gets free walks for all 9 of its lives. (Also, special Pricing upon request)</p>
             </div>
          </div>
       </div>
-      <div class="container-fluid text-center bg-grey">
+      <div id="portfolio" class="container-fluid text-center bg-grey">
          <h2>Portfolio</h2>
          <h4>What we do looks like</h4>
          <div class="row text-center">
@@ -119,13 +141,11 @@
          </div>
          <h2>What our customers say</h2>
          <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-            <!-- Indicators -->
             <ol class="carousel-indicators">
                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                <li data-target="#myCarousel" data-slide-to="1"></li>
                <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
-            <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                <div class="item active">
                   <h4>"Cat Walkers saved my life, literally"<br><span style="font-style:normal;">Lennie Marks, Maintenance, Sansbury</span></h4>
@@ -137,7 +157,6 @@
                   <h4>"I had them paint my Sparkles. We all just laughed and laughed and laughed."<br><span style="font-style:normal;">Karen, Unemployed, At home</span></h4>
                </div>
             </div>
-            <!-- Left and right controls -->
             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -146,6 +165,99 @@
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
             </a>
+         </div>
+      </div>
+      <div id="pricing" class="container-fluid">
+         <div class="text-center">
+            <h2>Pricing</h2>
+            <h4>Choose a plan that that matches your cats personality</h4>
+         </div>
+         <div class="row">
+            <div class="col-sm-4">
+               <div class="panel panel-default text-center">
+                  <div class="panel-heading">
+                     <h1>Basic</h1>
+                     <h6>Low maintenance kitty</h6>
+                  </div>
+                  <div class="panel-body">
+                     <p><strong>1</strong> Walk /Wk</p>
+                     <p><strong>12</strong> Baths /Yr</p>
+                     <p><strong>1</strong> Exorcism /Yr</p>
+                     <p><strong>1</strong> Painting /Yr</p>
+                  </div>
+                  <div class="panel-footer">
+                     <h3>$50</h3>
+                     <h4>per month</h4>
+                     <button class="btn btn-lg">Sign Up</button>
+                  </div>
+               </div>
+            </div>
+            <div class="col-sm-4">
+               <div class="panel panel-default text-center">
+                  <div class="panel-heading">
+                     <h1>Pro</h1>
+                     <h6>Slightly frisky kitty</h6>
+                  </div>
+                  <div class="panel-body">
+                     <p><strong>3</strong> Walks /Wk</p>
+                     <p><strong>24</strong> Baths/ Yr</p>
+                     <p><strong>2</strong> Exorcism /Yr</p>
+                     <p><strong>2</strong> Painting /Yr</p>
+                  </div>
+                  <div class="panel-footer">
+                     <h3>$100</h3>
+                     <h4>per month</h4>
+                     <button class="btn btn-lg">Sign Up</button>
+                  </div>
+               </div>
+            </div>
+            <div class="col-sm-4">
+               <div class="panel panel-default text-center">
+                  <div class="panel-heading">
+                     <h1>Premium</h1>
+                     <h6>Spawned from hell</h6>
+                  </div>
+                  <div class="panel-body">
+                     <p><strong>5</strong> Walks /Wk</p>
+                     <p><strong>48</strong> Baths/ Yr</p>
+                     <p><strong>6</strong> Exorcism /Yr</p>
+                     <p><strong>4</strong> Painting /Yr</p>
+                  </div>
+                  <div class="panel-footer">
+                     <h3>$200</h3>
+                     <h4>per month</h4>
+                     <button class="btn btn-lg">Sign Up</button>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div id="contact" class="container-fluid bg-grey">
+         <h2 class="text-center">CONTACT US</h2>
+         <div class="row">
+            <div class="col-sm-5">
+               <p>Fill out the form and we'll get back to you as soon as we can.</p>
+               <p><span class="glyphicon glyphicon-map-marker"></span>Portland, OR</p>
+               <p><span class="glyphicon glyphicon-phone"></span>(541) 555-5785</p>
+               <p><span class="glyphicon glyphicon-envelope"></span>Sirwalksalot@catwalkers.com</p>
+            </div>
+            <div class="col-sm-7">
+               <div class="row">
+                  <div class="col-sm-6 form-group">
+                     <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+                  </div>
+                  <div class="col-sm-6 form-group">
+                     <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+                  </div>
+               </div>
+               <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+               <br>
+               <div class="row">
+                  <div class="col-sm-12 form-group">
+                     <button class="btn btn-default pull-right" type="submit">Send</button>
+                  </div>
+               </div>
+            </div>
          </div>
       </div>
    </body>
