--- a/code/adrian/html_css_flask/labs/Lab3_company/index.html
+++ b/code/adrian/html_css_flask/labs/Lab3_company/index.html
@@ -11,13 +11,12 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="background"></div>
-        <div>
+        <!-- <div class="background"></div> -->
+        <div class="background">
             <div class="text1">You are in the right place.</div>
             <p>Nam eu magna in metus rutrum luctus. <br> Sed vitae sapien consequat, aliquam lectus at, sollicitudin ante.</p>
             <button class="btn" role="button">Click Me</button>
-            <img id="logo" src="https://cdn-icons.flaticon.com/png/128/2085/premium/2085206.png?token=exp=1656735139~hmac=0d1160b99b02ea83754a1eb342dcc1c8" alt="">
         </div>
-        <img id="bg-img" src="https://images.unsplash.com/photo-1645548921696-7ef48efd3782?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDExfENEd3V3WEpBYkV3fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
+        <img id="bg-img" src="https://images.unsplash.com/photo-1654768972246-d5bbc3c44cc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDEwMXxDRHd1d1hKQWJFd3x8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="">
     </div>
 </body>
