--- a/code/randall/flask_html_css/lab03_company/index.html
+++ b/code/randall/flask_html_css/lab03_company/index.html
@@ -39,10 +39,9 @@
     <div class="jumbotron text-center">
       <h1>Cat Walkers</h1>
       <p>We walk cats, so you don't have to.</p>
-      <p></p>
       <form class="form-inline">
         <div class="input-group">
-          <input type="email" class="form-control" size="50" placeholder="Email Address for subscription to silly cat things" required>
+          <input type="email" class="form-control" size="50" placeholder="Email Address for subscription to silly things" required>
           <div class="input-group-btn">
             <button type="button" class="btn btn-danger">Subscribe</button>
           </div>
@@ -267,7 +266,7 @@
         </div>
       </div>
     </div>
-    <!-- Footer with silly links -->
+    <!-- Footer with cat pic links -->
     <footer class="text-center">
       <div class="container p-4">
         <section class="mb-4">
