--- a/code/stacy/HTML_CSS_Flask/lab03/index.html
+++ b/code/stacy/HTML_CSS_Flask/lab03/index.html
@@ -191,21 +191,21 @@ Body:
         <div class="carousel-inner">
           <div class="carousel-item active"> 
             <img src="zipline1.jpg" class="img-fluid">
-            <div class="d-flex text-black position-absolute top-0 end-0 text-center translate-middle-x fs-4" style="width: 10rem; margin-right: 3rem; margin-top: 6rem;">
+            <!-- <div class="d-flex text-black position-absolute top-0 end-0 text-center translate-middle-x fs-4" style="width: 10rem; margin-right: 3rem; margin-top: 6rem;">
             Glide through the tree tops for an unforgetable view
-            </div>
+            </div> -->
           </div>
           <div class="carousel-item">
             <img src="zipline2.jpg" class="img-fluid">
-            <div class="d-flex text-black position-absolute top-0 end-0 text-center fs-4" style="width: 10rem; margin-right: 3rem; margin-top: 3rem;">
-            Feel the wind on you face as you fly across the water 
-            </div>
+            <!-- <div class="d-flex text-black position-absolute top-0 end-0 text-center fs-4" style="width: 10rem; margin-right: 3rem; margin-top: 3rem;">
+            Feel the wind on your face as you fly across the water 
+            </div> -->
           </div>
           <div class="carousel-item" >
             <img src="zipline3.jpg" class="img-fluid">
-            <div class="d-flex text-black position-absolute top-0 end-0 text-center fs-4" style="width: 10rem;">
+            <!-- <div class="d-flex text-black position-absolute top-0 end-0 text-center fs-4" style="width: 10rem;">
               Climb bridges to gain height for a faster ziplining experience!
-            </div>
+            </div> -->
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
