Updated footers Lab3

--- a/code/april/html_css_flask/lab3/classes.html
+++ b/code/april/html_css_flask/lab3/classes.html
@@ -59,5 +59,34 @@
             <a href="index.html" id="download-button" class="btn-large indigo lighten-2 waves-effect waves-purple">Go Back</a>
         </div>
     </main>
-</body>
+
+    <footer class="page-footer indigo darken-3">
+        <div class="container">
+            <div class="row">
+
+        <div class="col s12 m6 l6 center-align">
+            <h5 class="grey-text text-lighten-4 center-align">Virtual learning - anywhere, anytime.</h5>
+        </div>
+
+        <div class="col s12 m6 l6">
+            <h5 id="footer-title" class="white-text center">Connect With Us</h5>
+            <ul class="center">
+            <img src="./assets/facebook.png" alt="facebook"></a>
+            <img src="./assets/instagram.png" alt="instagram"></a>
+            <img src="./assets/pintrest.png" alt="pinterest"></a>
+            <img src="./assets/twitter.png" alt="twitter"></a>
+            </ul>
+        </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <div class="container white-text center">
+        © April 2022
+        <a class="white-text text-lighten-3" href="#">CoastalCdr</a>
+        </div>
+    </div>
+    </footer>
+
+    </body>
 </html>
+    
