--- a/code/april/html_css_flask/lab3/contact.html
+++ b/code/april/html_css_flask/lab3/contact.html
@@ -53,46 +53,65 @@
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
-
-    <h1 class="center" >Contact</h1>
-    <div class="row center">
-        <a href="index.html" id="download-button" class="btn-large waves-effect waves-purple">Go Back</a>
-    </div>
-    <br><br>
-
-    
-    <hr>
-
-    <div class="container">
-        <div class="row">
-            <div class="col m10 offset-m1 s1">
-                <h2 class="center-align">Contact Us</h2>
-                <div class="row">
-                    <form class="col m8 offset-m2 s12">
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="name" type="text">
-                                <label for="name">Name</label>
-                            </div>
-                            <div class="input-field col s12">
-                                <input id="phone" type="tel" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" class="form-input">
-                                <label for="phone">Phone</label>
-                            </div>
-                            <div class="input-field col s12">
-                                <input id="email" type="email" required class="form-input">
-                                <label for="email">Email</label>
-                            </div>
-                            <div class="input-field col s12">
-                              <textarea id="message" class="materialize-textarea"></textarea>
-                              <label for="message">Message</label>
-                            </div>
-                        </div>               
-                    </form>
-                </div>    
+    <main>
+        <br />
+        <div class="container">
+            <div class="row">
+                <div class="col m10 offset-m1 s1">
+                    <h2 class="indigo-text text-darken-4 center-align">Contact Us</h2>
+                    <div class="row ">
+                        <form class="col m8 offset-m2 s12">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input id="name" type="text">
+                                    <label for="name">Name</label>
+                                </div>
+                                <div class="input-field col s12">
+                                    <input id="phone" type="tel" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" class="form-input">
+                                    <label for="phone">Phone</label>
+                                </div>
+                                <div class="input-field col s12">
+                                    <input id="email" type="email" required class="form-input">
+                                    <label for="email">Email</label>
+                                </div>
+                                <div class="input-field col s12">
+                                <textarea id="message" class="materialize-textarea"></textarea>
+                                <label for="message">Message</label>
+                                </div>
+                            </div>               
+                        </form>
+                    </div>    
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 
+    <footer class="page-footer indigo darken-3">
+        <div class="container">
+            <div class="row">
 
-</body>
+        <div class="col s12 m6 l6 center-align">
+            <h5 class="grey-text text-lighten-4 center-align">Virtual learning - anywhere, anytime.</h5>
+        </div>
+
+        <div class="col s12 m6 l6">
+            <h5 id="footer-title" class="white-text center">Connect With Us</h5>
+            <ul class="center">
+            <img src="./assets/facebook.png" alt="facebook"></a>
+            <img src="./assets/instagram.png" alt="instagram"></a>
+            <img src="./assets/pintrest.png" alt="pinterest"></a>
+            <img src="./assets/twitter.png" alt="twitter"></a>
+            </ul>
+        </div>
+        </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container white-text center">
+            © April 2022
+            <a class="white-text text-lighten-3" href="#">CoastalCdr</a>
+            </div>
+        </div>
+    </footer>
+
+    </body>
 </html>
