--- a/code/april/html_css_flask/lab3/teach.html
+++ b/code/april/html_css_flask/lab3/teach.html
@@ -32,7 +32,7 @@
          <img width="55" id="title" class="icon hide-on-small" src="./assets/logo-white-crop.png" alt="logo">
          BZ Learning
        </a> 
-        
+
         <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -54,10 +54,39 @@
         </div>
     </nav>
 
+    <main>
+        <h1 class="center blue-text text-darken-4">Teach</h1>
+        <div class="row center">
+            <a href="index.html" id="download-button" class="btn-large blue lighten-3 waves-effect waves-blue">Go Back</a>
+        </div>
+    </main>
 
-    <h1 class="center blue-text text-darken-4">Teach</h1>
-    <div class="row center">
-        <a href="index.html" id="download-button" class="btn-large blue lighten-3 waves-effect waves-blue">Go Back</a>
-    </div>
-</body>
+    <footer class="page-footer indigo darken-3">
+        <div class="container">
+            <div class="row">
+
+        <div class="col s12 m6 l6 center-align">
+            <h5 class="grey-text text-lighten-4 center-align">Virtual learning - anywhere, anytime.</h5>
+        </div>
+
+        <div class="col s12 m6 l6">
+            <h5 id="footer-title" class="white-text center">Connect With Us</h5>
+            <ul class="center">
+            <img src="./assets/facebook.png" alt="facebook"></a>
+            <img src="./assets/instagram.png" alt="instagram"></a>
+            <img src="./assets/pintrest.png" alt="pinterest"></a>
+            <img src="./assets/twitter.png" alt="twitter"></a>
+            </ul>
+        </div>
+        </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container white-text center">
+            © April 2022
+            <a class="white-text text-lighten-3" href="#">CoastalCdr</a>
+            </div>
+        </div>
+    </footer>
+
+    </body>
 </html>
