--- a/code/april/html_css_flask/lab3/about.html
+++ b/code/april/html_css_flask/lab3/about.html
@@ -54,9 +54,40 @@
         </div>
     </nav>
     
-    <h1 class="center teal-text text-darken-1">About</h1>
-    <div class="row center">
-        <a href="index.html" id="download-button" class="btn-large waves-effect teal lighten-4 waves-purple">Go Back</a>
+    <main>
+        <h1 class="center teal-text text-darken-1">About</h1>
+        <div class="row center">
+            <a href="index.html" id="download-button" class="btn-large waves-effect teal lighten-4 waves-purple">Go Back</a>
+        </div>
+    </main>
+
+    <footer class="page-footer indigo darken-3">
+        <div class="container">
+            <div class="row">
+
+        <div class="col s12 m6 l6 center-align">
+            <h5 class="grey-text text-lighten-4 center-align">Virtual learning - anywhere, anytime.</h5>
+        </div>
+
+        <div class="col s12 m6 l6">
+            <h5 id="footer-title" class="white-text center">Connect With Us</h5>
+            <ul class="center">
+            <img src="./assets/facebook.png" alt="facebook"></a>
+            <img src="./assets/instagram.png" alt="instagram"></a>
+            <img src="./assets/pintrest.png" alt="pinterest"></a>
+            <img src="./assets/twitter.png" alt="twitter"></a>
+            </ul>
+        </div>
+        </div>
     </div>
-</body>
+    <div class="footer-copyright">
+        <div class="container white-text center">
+        © April 2022
+        <a class="white-text text-lighten-3" href="#">CoastalCdr</a>
+        </div>
+    </div>
+    </footer>
+
+    </body>
 </html>
+    
