Completed lab01 Version 2

--- a/code/stacy/javascript/labs/lab01/index.html
+++ b/code/stacy/javascript/labs/lab01/index.html
@@ -8,6 +8,10 @@
     <script defer src="./lab01.js"></script>
 </head>
 <body>
-    
+    <input id="inputNumber" type="text" placeholder="Enter measurement" />
+    <input id="inputUnit" type="text" placeholder="Enter input unit"/>
+    <input id="outputUnit" type="text" placeholder="Enter output unit"/>
+    <button id="run_bt">Convert!</button>
+    <div id="output_div"></div>
 </body>
 </html>
