--- a/code/ashby/JavaScript/rock_paper_scissors/index.html
+++ b/code/ashby/JavaScript/rock_paper_scissors/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
     <h1>Rock, Paper, Scissors in the console!</h1>
+
+    <input type="text" id="player_choice" placeholder="Rock, Paper, or scissors">
+    <button id="run_game">Play!</button>
+
+    <h3 id="game_result"></h3>
+
 </body>
 </html>
