Created new folders for each javascript redo

--- a/code/stacy/javascript/labs/lab01/unitConverter/index.html
+++ b/code/stacy/javascript/labs/lab01/unitConverter/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lab01: Javascript redo</title>
-    <script defer src="./lab01.js"></script>
+    <title>Unit Converter</title>
+    <script defer src="./lab01_unitConverter.js"></script>
 </head>
 <body>
     <input id="inputNumber" type="text" placeholder="Enter measurement" />
