--- a/code/ashby/JavaScript/rock_paper_scissors/index.html
+++ b/code/ashby/JavaScript/rock_paper_scissors/index.html
@@ -6,14 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="./RPS_game.js"></script>
+    <script defer src="./pass_gen.js"></script>
 </head>
 <body>
+<div>
     <h1>Rock, Paper, Scissors in the console!</h1>
 
     <input type="text" id="player_choice" placeholder="Rock, Paper, or scissors">
     <button id="run_game">Play!</button>
 
     <h3 id="game_result"></h3>
+</div>
+    <br>
+<div>
+    <h1>Random Password Generator</h1>
+
+    <input type="text" id="pass_length" placeholder="Length of password">
+    <button id="pw_gen">Generate!</button>
+    <h3 id="password_print"></h3>
+</div>
 
 </body>
 </html>
