--- a/code/ashby/JavaScript/rock_paper_scissors/index.html
+++ b/code/ashby/JavaScript/rock_paper_scissors/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Multiple thingies! | Very Wow!</title>
     <script defer src="./RPS_game.js"></script>
     <script defer src="./pass_gen.js"></script>
+    <script defer src="./rot_13.js"></script>
 </head>
 <body>
 <div>
@@ -24,6 +25,15 @@
     <input type="text" id="pass_length" placeholder="Length of password">
     <button id="pw_gen">Generate!</button>
     <h3 id="password_print"></h3>
+</div>
+
+<div>
+    <h1>ROT 13 encryption!</h1>
+
+    <input type="text" id="input_message" placeholder="What would you like to encrypt?">
+    <input type="number" id="input_rotation" min="1" max="26">
+    <button id="encrypt_button" >Encrypt</button>
+    <h3 id="encrypted_message"></h3>
 </div>
 
 </body>
