--- a/code/wesley/javascript/lecture/rot13/index.html
+++ b/code/wesley/javascript/lecture/rot13/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script defer src="./ROT.js"></script>
+    <title>Rot 13</title>
+    <script defer src="./main.js"></script>
 </head>
 <body>
-    
+    <h1>ROT 13</h1>
 </body>
 </html>
