--- a/code/ashby/JavaScript/Lab_01 Redo/index.html
+++ b/code/ashby/JavaScript/Lab_01 Redo/index.html
@@ -22,7 +22,7 @@
 <div>
     <h1>Random Password Generator</h1>
 
-    <input type="text" id="pass_length" placeholder="Length of password">
+    <input type="number" id="pass_length" placeholder="Length of password" value="8">
     <button id="pw_gen">Generate!</button>
     <h3 id="password_print"></h3>
 </div>
@@ -31,7 +31,7 @@
     <h1>ROT 13 encryption!</h1>
 
     <input type="text" id="input_message" placeholder="What would you like to encrypt?">
-    <input type="number" id="input_rotation" min="1" max="26">
+    <input type="number" id="input_rotation" min="1" max="26" value="13">
     <button id="encrypt_button" >Encrypt</button>
     <h3 id="encrypted_message"></h3>
 </div>
