Completed Credit Card Validator

--- a/code/stacy/javascript/practice/credit-card-validator/index.html
+++ b/code/stacy/javascript/practice/credit-card-validator/index.html
@@ -8,6 +8,8 @@
     <script defer src="./main.js"></script>
 </head>
 <body>
-    
+    <input type="text" id="cc-num" placeholder="Enter credit card number">
+    <button id="validate-btn">Validate</button>
+    <div id="is-valid"></div>
 </body>
 </html>
