Added number tracker thing

--- a/code/ashby/JavaScript/Lab_01 Redo/index.html
+++ b/code/ashby/JavaScript/Lab_01 Redo/index.html
@@ -70,7 +70,7 @@
 
 <div>
     <h1>Credit Card Validation!</h1>
-    <p>Enter card number:</p>
+    <p>Enter card number:</p> <p id="number-tracker"></p>
     <input id="credit-number" type="number" >
     <button id="credit-button">Validate card</button>
     <h3 id="credit-result"></h3>
