--- a/code/wesley/javascript/first_js/labs/lab1/index.html
+++ b/code/wesley/javascript/first_js/labs/lab1/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="./RPS.js"></script>
+    <script defer src="./ROT.js"></script>
 </head>
 <body>
-    <!-- <h1>Rot 13 boy!</h1>
+    <h1>Rot 13 boy!</h1>
     <input id="userString" type="text" placeholder="Your string here">
     <input id="rotateAmount"  type="number" placeholder="Your rotation amount">
     <button id="run">Send it!</button>
     <div id="output"></div>
-     -->
+    
     <h1>Dat Rock Paper Scissor Yo!</h1>
     <select id="RPS">
         <option value="rock" selected>Rock</option>
