Completed NumberToPhrase Version 1

--- a/code/stacy/javascript/practice/number-to-phrase/index.html
+++ b/code/stacy/javascript/practice/number-to-phrase/index.html
@@ -8,6 +8,8 @@
     <script defer src="./main.js"></script>
 </head>
 <body>
-    
+    <input type="number" id="number">
+    <button id="run-btn">Convert!</button>
+    <div id="output-div"></div>
 </body>
 </html>
