--- a/code/stacy/javascript/practice/number-to-phrase/index.html
+++ b/code/stacy/javascript/practice/number-to-phrase/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <input type="number" id="number">
-    <button id="run-btn">Convert!</button>
+    <button id="run-btn-phrase">Convert to phrase</button>
+    <button id="run-btn-roman">Convert to Roman numerals</button>
     <div id="output-div"></div>
 </body>
 </html>
