--- a/code/randall/javascript/lab04_dadjoke/index.html
+++ b/code/randall/javascript/lab04_dadjoke/index.html
@@ -8,11 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dad Joke</title>
   <script defer src="./main.js"></script>
-  <style>
-    html {
-      background-color: rgb(255, 255, 255);
-    }
-  </style>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <h1>Dad Jokes</h1>
