updated lab_04 version 2

--- a/code/ashby/JavaScript/Lab_04 Dad_Joke/index.html
+++ b/code/ashby/JavaScript/Lab_04 Dad_Joke/index.html
@@ -10,10 +10,15 @@
 </head>
 <body>
     <h1>Hello joke, I'm Dad!</h1>
+    <hr>
+    <br>
     <div class="input">
-        <button id="more-dad">I hate myself</button>
+        <input type="text" id="dad-input" placeholder="Search term...">
+        <button id="search-dad">Choose your Destiny</button>
+        <br>
+        <button id="random-dad">Embrace Chaos</button>
     </div>
-
+    <hr>
     <div id="dad-container">
 
     </div>
