--- a/code/wesley/javascript/first_js/labs/lab4/index.html
+++ b/code/wesley/javascript/first_js/labs/lab4/index.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAD Jokes</title>
     <script defer src="./main.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Dad Jokes for Funny Folks</h1>
-    <div>
-        <span>
-            <input type="text" id="search">
-            <button id="search-term">Search</button>
-        </span>
-        <button id="new-joke">New Joke</button>
+    <div class="content">
+        <h1>Dad Jokes for Funny Folks</h1>
+        <div>
+            <span>
+                <input type="text" id="search">
+                <button id="search-term">Search</button>
+            </span>
+            <button id="new-joke">New Joke</button>
+            <div id="joke"></div>
+            <div id="results"></div>
+        </div>
     </div>
-    <div id="joke"></div>
-    <div id="results"></div>
 </body>
 </html>
