--- a/code/randall/javascript/lab04_dadjoke/index.html
+++ b/code/randall/javascript/lab04_dadjoke/index.html
@@ -14,7 +14,10 @@
   <h1>Dad Jokes</h1>
   <div>
     <button id="btn">Get Joke</button>
+    
    <p id="joke"></p>
+   <!-- below is just playing with loaders. It's always on but will try and get it to display appropriately  -->
+   <div class="lds-ripple"><div></div><div></div></div>
   </div>
   
 </body>
