--- a/code/randall/javascript/lab04_dadjoke/index.html
+++ b/code/randall/javascript/lab04_dadjoke/index.html
@@ -17,7 +17,7 @@
     
    <p id="joke"></p>
    <!-- below is just playing with loaders. It's always on but will try and get it to display appropriately  -->
-   <div class="lds-ripple"><div></div><div></div></div>
+   <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
   </div>
   
 </body>
