Updated Dad Joke - Lab 4, added search function

--- a/code/april/javascript/dad_joke/index.html
+++ b/code/april/javascript/dad_joke/index.html
@@ -11,10 +11,21 @@
 <body>
 
     <h2>Dad Jokes</h2>
+    <div>
+        <h4 id="display-joke">Click for a Dad Joke...</h4>
+        <button id="new-joke-btn">New Joke</button>
+    </div>
 
-    <h4 id="display-joke">Click for a Dad Joke...</h4>
-    
-    <button id="new-joke-btn">New Joke</button>
+    <br />
+
+    <div id="search-div">
+        <label for="search-jokes">Search Jokes:</label>
+        <input type="text" id="search-jokes" placeholder="search jokes">
+        <button id="search-btn">Search</button>
+        
+    </div>
+
+    <div id="show-jokes"></div>
 
 
 </body>
