--- a/code/ashby/JavaScript/Lab_05 weather_app/index.html
+++ b/code/ashby/JavaScript/Lab_05 weather_app/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link href="./owfont-regular.css" rel="stylesheet" type="text/css">
     <!-- TODO: Make things prettier -->
     <!-- <link href="css/owfont-regular.css" rel="stylesheet" type="text/css"> -->
     <title>Your personalized weather forecast</title>
@@ -12,16 +13,18 @@
     <script defer src="./main.js"></script>
 </head>
 <body>
-    <h1>What's the weather like where you are?</h1>
+    <h1>What's the weather like over there?</h1>
     <hr>
-    <h4 id="location-bar"></h4>
+    <h4 id="location-bar"> Locating...</h4>
     <hr>
     <div id="weather-container">
-        <div class="date-container"><h3>Date and time of check</h3></h4></div>
-        <div class="forecast-container"><h3>forecast data goes here</h3></div>
-        <div class="location-container"><h3>Data on sunrise/sunset goes here</h3></div>
-        <div class="temp-container"><h3>Temperature conditions go here</h3></div>
+        <div class="date-container"><h3></h3></h4></div>
+        <div class="forecast-container"><h3></h3></div>
+        <div class="location-container"><h3></h3></div>
+        <div class="temp-container"><h3></h3></div>
     </div>
+ 
+    
 </body>
 
 
