--- a/code/adrian/javascript/labs/js_weather_api/index.html
+++ b/code/adrian/javascript/labs/js_weather_api/index.html
@@ -15,6 +15,6 @@
         <h1 class="text-2xl pb-4 text-slate-700 font-mono">Get Weather</h1>
     </div>
     <button id="submit-btn" class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-lg px-5 py-2.5 text-center mr-2 mb-2">Submit</button>
-    <div id="current" class="text-xl flex flex-col items-center text-slate-700 font-mono"></div>
+    <div id="current" class="pt-10 text-xl flex flex-col items-center text-slate-700 font-mono"></div>
 </body>
 </html>
