--- a/code/stacy/javascript/labs/moblab_snowman/index.html
+++ b/code/stacy/javascript/labs/moblab_snowman/index.html
@@ -19,11 +19,22 @@
             display: inline-block;
             text-align: center;
         }
+        #snowman-img {
+            width: 500px;
+            margin: 0 auto;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
     <div id="letters-div"></div>
-    <div id="snowman"></div>
+    <div id="snowman">
+        <img src="https://www.hanginghyena.com/static/branding/art/Snowman-1.jpg" id="snowman-img" alt="A picture of a snowman">
+    </div>
     <div id="user-interface"></div>
     <div  class="guess-container">
         <input type="text" id="guess-word" placeholder="Guess word">
