--- a/code/randall/javascript/lab05_weatherAPI/index.html
+++ b/code/randall/javascript/lab05_weatherAPI/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="secrets.js"></script>
+    <script defer src="./weather.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <h1>Weather</h1>
+    <div id="lat-long"></div>
     
 </body>
 </html>
