--- a/code/stacy/capstone/Tables_n_Stuff/tables.html
+++ b/code/stacy/capstone/Tables_n_Stuff/tables.html
@@ -1,4 +1,4 @@
-Personality traditions
+Personality traits
 
 I idolize a particular hero of my faith and constantly refer to that person's deeds and example.
 I can find common ground between the fiercest enemies, empathizing with them and always working toward peace.
